##############################################################################
# DATE:        2015
# DESCRIPTION: CMakeLists.txt file
##############################################################################

ADD_SUBDIRECTORY(documentation)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(lib_behaviors-auto)
